--- a/CSS/page.css
+++ b/CSS/page.css
@@ -1,3 +1,7 @@
+body{
+    height: 100%;
+}
+
 .container{
     position: fixed;
     left: 0px;
@@ -45,4 +49,5 @@
     left: 0px;
     top: 0px;
     
+    padding:25px;
 }
