--- a/CSS/page.css
+++ b/CSS/page.css
@@ -1,9 +1,10 @@
 body{
     height: 100%;
+    overflow: hidden;
 }
 
 .container{
-    position: fixed;
+    position: absolute;
     left: 0px;
     top: 0px;
     width: 100vw;
@@ -11,7 +12,7 @@ body{
 }
 
 #bg{
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     left: 0px;
@@ -23,7 +24,7 @@ body{
 }
 
 #pageMask{
-    position: fixed;
+    position: absolute;
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 0px;
@@ -37,17 +38,18 @@ body{
     background-position: 100%;
 
 }
-
-.myPage{
-    position: static;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 0px;
-    bottom: 10%;
-    width: 90%;
-    height: 80%;
-    left: 0px;
-    top: 0px;
-    
-    padding:25px;
+.myPage {
+	position: absolute;
+	padding-left: 25px;
+	padding-right: 25px;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 0px;
+	bottom: 10%;
+	width: calc(90% - 50px);
+	height: 75%;
+	left: 0%;
+	top: 7.5%;
+	
 }
+
