--- a/WebQianduanJishu-master/WebQianduanJishu-master/CSS/NavBar.css
+++ b/WebQianduanJishu-master/WebQianduanJishu-master/CSS/NavBar.css
@@ -6,30 +6,20 @@
     width: 100%;
 }
 
-#NavBar{
-    position: absolute;
+.NavBar_Main,{
+    position: fixed;
     width: 100%;
     height: 20%;
     bottom: 0px;
     left: 0px;
     opacity: 0.3;}
-
-
 .NavBar_BG{
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 20%;
     bottom: 0px;
     left: 0px;
-    transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    opacity: 30%;}
-.NavBar_BG:hover{
-    opacity: 100%;
-    transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-}
-
+    opacity: 1;}
 
 .NavBarAlert{
     position: absolute;
@@ -41,32 +31,6 @@
     margin-top: -50px;
     opacity: 1;
 }
-
-.NavItem{
-    margin-left: -50px;
-    position: absolute;
-    width: 100px;
-    height: 80px;
-    
-}
-.NavItem:nth-child(2){left: 13%;top: 20%;}
-.NavItem:nth-child(3){left: 29%;top: -10%;}
-.NavItem:nth-child(4){left: 45%;top: 20%;}
-.NavItem:nth-child(5){left: 61%;top: -10%;}
-.NavItem:nth-child(6){left: 77%;top: 20%;}
-
-.NavText{
-    position: absolute;
-    width: 100px;
-    height: 30px;
-    top:0px;
-    margin-top: 40px;
-    background: green;
-    border-radius: 10px;
-    text-align: center;
-}
-
-
 .circle{
     animation:circleOut 2s infinite;
     position: absolute;
@@ -136,7 +100,7 @@
     top: 20%;
     width: 5%;
     height: 60%;
-    opacity: 0.4;
+    opacity: 1;
 }
 #RButton{
     position: absolute;
@@ -144,7 +108,7 @@
     top: 20%;
     width: 5%;
     height: 60%;
-    opacity: 0.4;
+    opacity: 1;
 }
 .LB_Element{
     height: 100%;
